# ds_template

./: README.md  cookiecutter.json
{{cookiecutter.project}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
{{cookiecutter.project}}/.devcontainer/: devcontainer.json
{{cookiecutter.project}}/.dvc/: config
{{cookiecutter.project}}/src/config/: config.py  config.yaml
